fixed alignment in css for safari

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -117,5 +117,10 @@ body {
     text-align: center;
     line-height: 70px;
    }
-  
+
+   .last {
+      position: absolute;
+      margin-top: 15px;
+   }
+
 }
